# JDebug

./: .gitignore  .gitmodules  CMakeLists.txt  Generate.ps1  Generate.sh  LICENSE  README.md  RunCMake.ps1  copyrightnotices.txt  nsCMakeConfig.cmake  thirdpartylicenses.txt  thirdpartynotices.txt  version.txt  wdCMakeConfig.cmake
Code/Core/: CMakeLists.txt  CoreDLL.h  CoreInternal.h  CorePCH.cpp
Code/Core/Console/: Console.h  ConsoleFunction.h  LuaInterpreter.h  QuakeConsole.h
Code/Core/Input/: Declarations.h  InputDevice.h  InputManager.h  VirtualThumbStick.h
Code/Core/Messages/: ApplyOnlyToMessage.h  CollisionMessage.h  CommonMessages.h  DeleteObjectMessage.h  EventMessage.h  HierarchyChangedMessages.h  SetColorMessage.h  TransformChangedMessage.h  TriggerMessage.h  UpdateLocalBoundsMessage.h
Code/Core/Physics/: SurfaceResource.h  SurfaceResourceDescriptor.h
Code/Core/Prefabs/: PrefabReferenceComponent.h  PrefabResource.h
Code/Core/ResourceManager/: Resource.h  ResourceHandle.h  ResourceManager.h  ResourceTypeLoader.h
Code/Core/Scripting/: DuktapeContext.h  DuktapeFunction.h  DuktapeHelper.h  LuaWrapper.h  ScriptAttributes.h  ScriptClassResource.h  ScriptComponent.h  ScriptCoroutine.h  ScriptRTTI.h  ScriptWorldModule.h
Code/Core/System/: ControllerInput.h  Window.h
Code/Core/Utils/: Blackboard.h  CustomData.h  IntervalScheduler.h
Code/Core/World/: Component.h  ComponentManager.h  CoordinateSystem.h  Declarations.h  EventMessageHandlerComponent.h  GameObject.h  GameObjectDesc.h  SettingsComponent.h  SettingsComponentManager.h  SpatialData.h  SpatialSystem.h  SpatialSystem_RegularGrid.h  World.h  WorldDesc.h  WorldModule.h  WorldModuleConfig.h
Code/Core/WorldSerializer/: WorldReader.h  WorldWriter.h
Code/Foundation/: Basics.h  CMakeLists.txt  FoundationInternal.h  FoundationPCH.cpp  FoundationPCH.h  UserConfig.h  ezEngine.natvis  nsEngine.natvis  nsEngine.py
Code/Foundation/Algorithm/: Comparer.h  HashHelperString.h  HashStream.h  HashableStruct.h  HashingUtils.h  Sorting.h
Code/Foundation/Application/: Application.h
Code/Foundation/Basics/: AllDefinesOff.h  Assert.cpp  Assert.h  Basics.cpp  IncludeAll.cpp  PreprocessorUtils.h
Code/Foundation/CodeUtils/: MathExpression.h  Preprocessor.h  TokenParseUtils.h  Tokenizer.h
Code/Foundation/Communication/: DataTransfer.h  Event.h  GlobalEvent.h  IpcChannel.h  IpcProcessMessageProtocol.h  Message.h  MessageQueue.h  RemoteInterface.h  RemoteInterfaceEnet.h  RemoteMessage.h  Telemetry.h
Code/Foundation/Configuration/: CVar.h  Plugin.h  Singleton.h  Startup.h  StaticSubSystem.h  SubSystem.h
Code/Foundation/Containers/: ArrayBase.h  ArrayMap.h  Bitfield.h  Blob.h  Deque.h  DynamicArray.h  HashSet.h  HashTable.h  HybridArray.h  IdTable.h  IterateBits.h  List.h  Map.h  Set.h  SmallArray.h  StaticArray.h  StaticRingBuffer.h
Code/Foundation/IO/: ChunkStream.h  CompressedStreamZlib.h  CompressedStreamZstd.h  DeduplicationReadContext.h  DeduplicationWriteContext.h  DependencyFile.h  DirectoryWatcher.h  FileEnums.h  JSONParser.h  JSONReader.h  JSONWriter.h  MemoryMappedFile.h  MemoryStream.h  OSFile.h  OpenDdlParser.h  OpenDdlReader.h  OpenDdlUtils.h  OpenDdlWriter.h  SerializationContext.h  Stream.h  StreamUtils.h  StringDeduplicationContext.h  TypeVersionContext.h
Code/Foundation/Logging/: ConsoleWriter.h  ETWWriter.h  HTMLWriter.h  Log.h  LogEntry.h  VisualStudioWriter.h
Code/Foundation/Math/: Angle.h  BoundingBox.h  BoundingBoxSphere.h  BoundingSphere.h  Color.h  Color16f.h  Color8UNorm.h  ColorScheme.h  Constants.h  CurveFunctions.h  Declarations.h  FixedPoint.h  Float16.h  Frustum.h  Intersection.h  Mat3.h  Mat4.h  Math.h  Plane.h  Quat.h  Random.h  Rational.h  Rect.h  Size.h  Transform.h  Vec2.h  Vec3.h  Vec4.h
Code/Foundation/Memory/: Allocator.h  AllocatorBase.h  AllocatorWithPolicy.h  AllocatorWrapper.h  BlockStorage.h  CommonAllocators.h  EndianHelper.h  FrameAllocator.h  InstanceDataAllocator.h  LargeBlockAllocator.h  LinearAllocator.h  MemoryTracker.h  MemoryUtils.h  PageAllocator.h  StackAllocator.h
Code/Foundation/Platform/: PlatformDesc.h
Code/Foundation/Profiling/: Profiling.h  ProfilingUtils.h  Profiling_Superluminal.h  Profiling_Tracy.h
Code/Foundation/Reflection/: PropertyPath.h  ReflectionUtils.h
Code/Foundation/Serialization/: AbstractObjectGraph.h  ApplyNativePropertyChangesContext.h  BinarySerializer.h  DdlSerializer.h  GraphPatch.h  GraphVersioning.h  ReflectionSerializer.h  RttiConverter.h
Code/Foundation/SimdMath/: SimdBBox.h  SimdBBoxSphere.h  SimdBSphere.h  SimdConversion.h  SimdFloat.h  SimdMat4f.h  SimdMath.h  SimdNoise.h  SimdQuat.h  SimdRandom.h  SimdSwizzle.h  SimdTransform.h  SimdTypes.h  SimdVec4b.h  SimdVec4f.h  SimdVec4i.h  SimdVec4u.h
Code/Foundation/Strings/: FormatString.h  HashedString.h  PathUtils.h  String.h  StringBuilder.h  StringConversion.h  StringUtils.h  StringView.h  TranslationLookup.h  UnicodeUtils.h
Code/Foundation/System/: CrashHandler.h  EnvironmentVariableUtils.h  MiniDumpUtils.h  PlatformFeatures.h  Process.h  ProcessGroup.h  Screen.h  StackTracer.h  SystemInformation.h
Code/Foundation/Threading/: Lock.h  (+13 more)
Code/Inspector/: CMakeLists.txt  CVarsWidget.cpp  CVarsWidget.moc.h  CVarsWidget.ui  DataTransferWidget.cpp  DataTransferWidget.moc.h  FileWidget.cpp  FileWidget.moc.h  GlobalEventsWidget.cpp  GlobalEventsWidget.moc.h  InputWidget.cpp  InputWidget.moc.h  Inspector.cpp  LogDockWidget.cpp  LogDockWidget.moc.h  LogDockWidget.ui  MainWidget.cpp  MainWidget.moc.h  MainWindow.cpp  MainWindow.moc.h  MainWindow.ui  MainWindowActions.cpp  MemoryWidget.cpp  MemoryWidget.moc.h  PluginsWidget.cpp  PluginsWidget.moc.h  ReflectionWidget.cpp  ReflectionWidget.moc.h  ResourceWidget.cpp  ResourceWidget.moc.h  StatVisWidget.cpp  StatVisWidget.moc.h  SubsystemsWidget.cpp  SubsystemsWidget.moc.h  TimeWidget.cpp  TimeWidget.moc.h  resources.qrc
Code/RendererVulkan/: CMakeLists.txt  RendererVulkanDLL.h  RendererVulkanPCH.cpp
Code/ShaderCompilerDXC/: CMakeLists.txt  ShaderCompilerDXC.cpp  ShaderCompilerDXC.h  ShaderCompilerDXCDLL.h  finalize.cmake
(+3510 files in other folders)
